# PoseJudger

./: CMakeLists.txt  README.md  analysis_module.py  main.cpp  pose_judger.cpp  pose_judger.h
TestAndAnalysis_test/Data/Scene1/RelocalizationData/Position1/: EigenVector.json
TestAndAnalysis_test/Data/Scene1/RelocalizationData/Position2/: EigenVector.json
TestAndAnalysis_test/Data/Scene1/RelocalizationData/Position3/: EigenVector.json
TestAndAnalysis_test/Data/Scene1/RelocalizationData/Position4/: EigenVector.json
TestAndAnalysis_test/Data/Scene1/RelocalizationData/Position5/: EigenVector.json
TestAndAnalysis_test/Data/Scene10/RelocalizationData/Position1/: EigenVector.json
TestAndAnalysis_test/Data/Scene10/RelocalizationData/Position2/: EigenVector.json
TestAndAnalysis_test/Data/Scene10/RelocalizationData/Position3/: EigenVector.json
TestAndAnalysis_test/Data/Scene10/RelocalizationData/Position4/: EigenVector.json
TestAndAnalysis_test/Data/Scene10/RelocalizationData/Position5/: EigenVector.json
TestAndAnalysis_test/Data/Scene11/RelocalizationData/Position1/: EigenVector.json
TestAndAnalysis_test/Data/Scene11/RelocalizationData/Position2/: EigenVector.json
TestAndAnalysis_test/Data/Scene11/RelocalizationData/Position3/: EigenVector.json
TestAndAnalysis_test/Data/Scene11/RelocalizationData/Position4/: EigenVector.json
TestAndAnalysis_test/Data/Scene11/RelocalizationData/Position5/: EigenVector.json
TestAndAnalysis_test/Data/Scene12/RelocalizationData/Position1/: EigenVector.json
(+207 files in other folders)
