cmake_minimum_required(VERSION 3.8)
Project(PoseJudger)

find_package( PythonInterp 3.5 REQUIRED )
find_package( PythonLibs 3.5 REQUIRED )

message(STATUS "Process Project: ${CMAKE_CURRENT_SOURCE_DIR}")
message(STATUS "Process Project: ${CMAKE_BUILD_TYPE}")
message(STATUS "Process Project: ${PYTHON_INCLUDE_DIRS}")

set(SRC_PATH ${CMAKE_CURRENT_SOURCE_DIR})
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin )

file(GLOB_RECURSE SRC_LIST ${SRC_PATH}/*.cpp ${SRC_PATH}/svm/*.cpp)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/svm)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS})
LINK_DIRECTORIES(${PYTHON_LIBRARIES})

IF (CMAKE_BUILD_TYPE STREQUAL Debug)
    LINK_LIBRARIES(*_d.lib)
ELSEIF (CMAKE_BUILD_TYPE STREQUAL RelWithDebInfo)
	LINK_LIBRARIES(*.lib)
ENDIF()

ADD_EXECUTABLE(PoseJudger ${SRC_LIST})
